# tado_autoassist

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
src/: tado_autoassist.py
tests/: test_tado_autoassist.py
